# Game-of-Life

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Cell.hpp  GameOfLife.hpp
src/: Cell.cpp  GameOfLife.cpp  main.cpp
